tests/ui/parser/virtual-structs.stderr
error: expected item, found reserved keyword `virtual`
  --> $DIR/virtual-structs.rs:3:1
   |
LL | virtual struct SuperStruct {
   | ^^^^^^^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

